--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>We&rsquo;ll be back soon!</h1>
     <div>
         <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. 
-          If you need to you can always <a href="mailto:help@advancedplugins.net">email us</a>, or contact via <a href="https://t">email us</a> otherwise we&rsquo;ll be back online shortly!</p>
+          If you need to you can always <a href="mailto:help@advancedplugins.net">email us</a>, or contact via <a href="https://advancedplugins.net/discord">discord</a>, otherwise we&rsquo;ll be back online shortly!</p>
         <p>&mdash; AdvancedPlugins.net</p>
     </div>
 </article>
