--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>Site Maintenance</title>
+<title>Maintenance | AdvancedPlugins.net</title>
 <style>
   body { text-align: center; padding: 150px; }
   h1 { font-size: 50px; }
@@ -15,9 +15,9 @@
         <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. 
           If you need to you can always <a href="mailto:help@advancedplugins.net">email us</a>, or contact via <a href="https://advancedplugins.net/discord">discord</a>, otherwise we&rsquo;ll be back online shortly!</p>
       <br/>If you are searching for our products, you can find them on alternative pages here: 
-      <p>AdvancedEnchantments - <a href="https://www.spigotmc.org/resources/43058/">https://www.spigotmc.org/resources/43058/</a></p>
-      <p>AdvancedSpawners - <a href="https://www.spigotmc.org/resources/75458/">https://www.spigotmc.org/resources/75458/</a></p>
-      <p>BattlePass - <a href="https://www.spigotmc.org/resources/63076/">https://www.spigotmc.org/resources/63076/</a></p>
+     <br/> AdvancedEnchantments - <a href="https://www.spigotmc.org/resources/43058/">https://www.spigotmc.org/resources/43058/</a>
+      <br/>AdvancedSpawners - <a href="https://www.spigotmc.org/resources/75458/">https://www.spigotmc.org/resources/75458/</a>
+      <br/>BattlePass - <a href="https://www.spigotmc.org/resources/63076/">https://www.spigotmc.org/resources/63076/</a>
       
       <p>&mdash; AdvancedPlugins.net</p>
     </div>
