--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. 
           If you need to you can always <a href="mailto:help@advancedplugins.net">email us</a>, or contact via <a href="https://advancedplugins.net/discord">discord</a>, otherwise we&rsquo;ll be back online shortly!</p>
       <br/>If you are searching for our products, you can find them on alternative pages here: 
-     <br/> AdvancedEnchantments - <a href="https://www.spigotmc.org/resources/43058/">https://www.spigotmc.org/resources/43058/</a>
+     <br/><br/>AdvancedEnchantments - <a href="https://www.spigotmc.org/resources/43058/">https://www.spigotmc.org/resources/43058/</a>
       <br/>AdvancedSpawners - <a href="https://www.spigotmc.org/resources/75458/">https://www.spigotmc.org/resources/75458/</a>
       <br/>BattlePass - <a href="https://www.spigotmc.org/resources/63076/">https://www.spigotmc.org/resources/63076/</a>
       
