--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <br/>If you are searching for our products, you can find them on alternative pages here: 
      <br/><br/>AdvancedEnchantments - <a href="https://www.spigotmc.org/resources/43058/">https://www.spigotmc.org/resources/43058/</a>
       <br/>AdvancedSpawners - <a href="https://www.spigotmc.org/resources/75458/">https://www.spigotmc.org/resources/75458/</a>
+      <br/>Tokens - <a href="https://www.spigotmc.org/resources/79668/">https://www.spigotmc.org/resources/79668/</a>
       <br/>BattlePass - <a href="https://www.spigotmc.org/resources/63076/">https://www.spigotmc.org/resources/63076/</a>
       
       <p>&mdash; AdvancedPlugins.net</p>
