--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
           If you need to you can always <a href="mailto:help@advancedplugins.net">email us</a>, or contact via <a href="https://advancedplugins.net/discord">discord</a>, otherwise we&rsquo;ll be back online shortly!</p>
       <br/>If you are searching for our products, you can find them on alternative pages here: 
      <br/><br/>AdvancedEnchantments - <a href="https://www.spigotmc.org/resources/43058/">https://www.spigotmc.org/resources/43058/</a>
-      <br/>AdvancedSpawners - <a href="https://www.spigotmc.org/resources/75458/">https://www.spigotmc.org/resources/75458/</a>
-      <br/>Tokens - <a href="https://www.spigotmc.org/resources/79668/">https://www.spigotmc.org/resources/79668/</a>
       <br/>BattlePass - <a href="https://www.spigotmc.org/resources/63076/">https://www.spigotmc.org/resources/63076/</a>
+      <br/>AdvancedPets - <a href="https://www.spigotmc.org/resources/99971/">https://www.spigotmc.org/resources/99971/</a>
+      <br/>MiniaturePets - <a href="https://www.spigotmc.org/resources/23991/">https://www.spigotmc.org/resources/23991/</a>
+      <br/>Tokens - <a href="https://www.spigotmc.org/resources/79668/">https://www.spigotmc.org/resources/79668/</a>
       
       <p>&mdash; AdvancedPlugins.net</p>
     </div>
