--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
   article { display: block; text-align: left; width: 650px; margin: 0 auto; }
   a { color: #dc8100; text-decoration: none; }
   a:hover { color: #333; text-decoration: none; }
+  .logo { width: 150px; }
 </style>
 
 <article>
+    <h1><img src="https://i.imgur.com/9Ph5MpF.png" class="logo"></h1>
     <h1>We&rsquo;ll be back soon!</h1>
     <div>
         <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. 
