--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 <!doctype html>
 <title>Maintenance | AdvancedPlugins.net</title>
 <style>
-  body { text-align: center; padding: 150px; }
+  body { 
+    text-align: center; 
+	padding: 150px; 
+	background: rgb(8,164,255);
+	background: linear-gradient(140deg, rgba(8,164,255,1) 0%, rgba(211,211,227,1) 12%, rgba(255,255,255,1) 30%, rgba(255,255,255,1) 70%, rgba(211,211,227,1) 88%, rgba(8,164,255,1) 100%, rgba(8,164,255,1) 100%);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+  }
+  
   h1 { font-size: 50px; }
   body { font: 20px Helvetica, sans-serif; color: #333; }
   article { display: block; text-align: left; width: 650px; margin: 0 auto; }
   a { color: #dc8100; text-decoration: none; }
   a:hover { color: #333; text-decoration: none; }
-  .logo { width: 150px; }
+  .logo { width: 200px; }
+  
 </style>
 
 <article>
-    <h1><img src="https://i.imgur.com/9Ph5MpF.png" class="logo"></h1>
+    <center><img src="https://i.imgur.com/9Ph5MpF.png" class="logo"></center>
     <h1>We&rsquo;ll be back soon!</h1>
     <div>
         <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. 
